--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <div id="customfooter"></div>
     </div>
     <script src="app.js"></script>
-    <script src="./modules.js"></script>
+    <script src="modules.js"></script>
 </body>
 </html>
