rest api, new buttons, fixes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="../node_modules/xterm/dist/xterm.css"/>
     <link rel="icon" href="./logo.png">
-    <script src="./node_modules/xterm/dist/xterm.js"></script>
+    <script src="./js_modules/xterm/dist/xterm.js"></script>
     <script src="./ee.js"></script>
+    <script
+            src="http://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous">
+    </script>
 </head>
 <body>
     <div id="top">
