docs, things, etc

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="../node_modules/xterm/dist/xterm.css"/>
-    <link rel="icon" href="./logo.png">
+    <link rel="icon" href="./img/logo.png">
     <script src="./js_modules/xterm/dist/xterm.js"></script>
     <script src="./ee.js"></script>
-    <script
-            src="http://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous">
-    </script>
+    <link rel="stylesheet" href="highlight/styles/atom-one-dark.css">
+    <script src="highlight/highlight.pack.js"></script>
 </head>
 <body>
     <div id="top">
-        <span id="logo">>_ Codelab</span>
+        <span class="logo">>_ Codelab</span>
+        <span id="beta">β</span>
+        <div id="top-btns">
+            <span id="docs-btn">Docs</span>
+        </div>
         <span style="padding-right: 10px;"> </span>
         <div id="vl"></div>
         <div id="tabs">
