--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <script src="./ee.js"></script>
     <link rel="stylesheet" href="highlight/styles/atom-one-dark.css">
     <script src="highlight/highlight.pack.js"></script>
+    <script src="https://rawcdn.githack.com/paulmillr/es6-shim/ad5c18c47e42682f1891f48c5f32fd23eb76ddcd/es6-shim.min.js"></script>
 </head>
 <body>
     <div id="top">
         <span class="logo">>_ Codelab</span>
         <span id="beta">β</span>
         <div id="top-btns">
+            <span id="save-btn">Save</span>
+            <span id="load-btn">Load</span>
             <span id="docs-btn">Docs</span>
         </div>
         <span style="padding-right: 10px;"> </span>
@@ -34,6 +37,9 @@
         <div id="terminal-btn">
             <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/terminal-512.png" width="16px" height="16px"/>
             <span>Terminal</span>
+        </div>
+        <div id="projectname">
+            <span>Unnamed project</span>
         </div>
         <div id="vl2"></div>
         <div id="customfooter"></div>
