rest and things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Codelab</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="The tools for a developers.">
     <meta name="theme-color" content="rgb(30, 30, 33)">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300i">
@@ -35,11 +38,11 @@
     <div id="window"></div>
     <div id="footer">
         <div id="terminal-btn">
-            <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/terminal-512.png" width="16px" height="16px"/>
+            <img alt="Terminal" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/terminal-512.png" width="16px" height="16px"/>
             <span>Terminal</span>
         </div>
         <div id="projectname">
-            <span>Unnamed project</span>
+            <span id="name">Unnamed project</span>
         </div>
         <div id="vl2"></div>
         <div id="customfooter"></div>
