--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <link rel="stylesheet" href="highlight/styles/atom-one-dark.css">
     <script src="highlight/highlight.pack.js"></script>
     <script src="https://rawcdn.githack.com/paulmillr/es6-shim/ad5c18c47e42682f1891f48c5f32fd23eb76ddcd/es6-shim.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137155489-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-137155489-1');
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="top">
